# ocam-calibration-gazebo

./: CMakeLists.txt  package.xml
launch/: fisheye_spawn.launch  spawn_setup.launch
meshes/: chessboard.dae
rviz/: model.rviz
src/: calibration.py
urdf/: chessboard.urdf.xacro  fisheye.urdf.xacro  out.urdf  setup.urdf.xacro
worlds/: default.world
